Add Docker cookbooks and documentation, update firehol to restart docker on start|stop|restart

--- a/app/kitchen/site-cookbooks/firehol/templates/default/firehol.conf.erb
+++ b/app/kitchen/site-cookbooks/firehol/templates/default/firehol.conf.erb
@@ -112,9 +112,8 @@ FIREHOL_LOG_BURST="5"
 interface "${lan_interface}" lan
         policy accept
 
-interface "${internet_interface}" internet
+interface "${internet_interface}" internet src not "${newunroutable_ips}" "${internet_params[@]}"
 
-        src not "${newunroutable_ips}" "${internet_params[@]}"
         protection "${internet_protections}" ${internet_requests}
         policy reject
         client all accept
@@ -141,3 +140,4 @@ interface "${internet_interface}" internet
 
         # Consul
         server consul accept src "${CONSUL_ACCESS}"
+
